--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Google</title>
+    <link href="css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <button id="sign-in" type="button" class="btn btn-primary navbar-btn pull-right">Sign in</button>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://gmail.com">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href=""><span class="glyphicon glyphicon-th" aria-hidden="true"></span></a></li>
+                <li><a href=""><span class="glyphicon glyphicon-bell" aria-hidden="true"></span></a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 
 </body>
+
 </html>
