Design of a google page footer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
     </div>
 </nav>
 
+<footer>
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container-fluid">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Use Google.co.ug</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </div>
+    </nav>
+</footer>
 
 </body>
 
