Added input field, search button and lucky button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     </div>
 </nav>
 
+<div class="container">
+    <div id="search-area">
+        <input id="search-txt" class="form-control input-lg" type="text" placeholder="Press Enter to search">
+    </div>
+    <div id="button-cluster">
+        <button type="button" class="btn btn-default search-button"><strong>Google Search</strong></button>
+        <button type="button" class="btn btn-default search-button"><strong>I'm feeling lucky</strong></button>
+    </div>
+</div>
+
 <footer>
     <nav class="navbar navbar-default navbar-fixed-bottom">
         <div class="container-fluid">
