Added the google logo image and aligned it. Also added styles to format the page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Google</title>
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -23,6 +24,7 @@
 </nav>
 
 <div class="container">
+    <img id="center-img" src="img/google_image.png" class="img-responsive" alt="">
     <div id="search-area">
         <input id="search-txt" class="form-control input-lg" type="text" placeholder="Press Enter to search">
     </div>
